--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,6 +1,10 @@
 {
   "compilerOptions": {
     "baseUrl": "./",
+    "paths": {
+      "@/components/*": ["src/components/_shared/*","src/components/_templates/*"],
+      "@/styles/*": ["src/components/_templates/*","styles/*"]
+    },
     "target": "es5",
     "lib": [
       "dom",
