--- a/backend/package.json
+++ b/backend/package.json
@@ -7,9 +7,10 @@
     "dev": "nodemon src/app.ts"
   },
   "author": "",
-  "license": "ISC", 
+  "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.17",
+    "axios": "^1.6.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
