--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --config nodemon.json src/app.ts"
+    "dev": "nodemon src/app.ts"
   },
   "author": "",
   "license": "ISC",
@@ -14,11 +14,11 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
-    "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.0"
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "jest": "^29.7.0",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.3.2"
   }
 }
