To include declarations

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -19,5 +19,12 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "skipLibCheck": true
-  }
+  },
+  "include": [
+    "src/**/*.d.ts",
+    "**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
