--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "*"
     ],
     "scripts": {
-        "client": "yarn workspace frontend dev",
+        "frontend": "yarn workspace frontend dev",
         "backend": "yarn workspace backend dev",
         "dev": "yarn && npm-run-all --parallel frontend backend"
     },
