--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "workspaces": ["*"],
     "scripts": {
         "frontend": "yarn workspace rick-and-morty-fe dev",
-        "backend": "yarn workspace rick-and-morty-be dev"
+        "backend": "yarn workspace rick-and-morty-be dev",
+        "both": "yarn && npm-run-all --parallel frontend backend"
     },
     "author": "",
     "license": "ISC",
